force-app/main/default/objects/DocuSignConfig__c/DocuSignConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocuSign Config</label>
</CustomObject>