force-app/main/default/objects/DocuSignConfig__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <label>Named Credential</label>
    <length>55</length>
    <type>Text</type>
</CustomField>