force-app/main/default/objects/DocuSignConfig__c/fields/PdfFilename__c.field-meta.xml
<CustomField>
    <fullName>PdfFilename__c</fullName>
    <label>Pdf Filename</label>
    <length>55</length>
    <type>Text</type>
</CustomField>